--- a/package.json
+++ b/package.json
@@ -9,13 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "convex": "^0.12.1",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.4",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-web": "~0.18.10",
+    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.31",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^5.0.2"
   },
-  "private": true
+  "private": true,
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
+  }
 }
